--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.475.0",
     "mongoose": "^8.10.0",
     "next": "15.1.5",
     "react": "^19.0.0",
