--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "axios": "^1.9.0",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.10.0",
     "next": "15.1.5",
