--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
@@ -26,7 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "daisyui": "^4.12.23",
+    "daisyui": "^5.0.43",
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
     "postcss": "^8",
