--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.9.0",
+    "chart.js": "^4.5.0",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.10.0",
     "next": "15.1.5",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5"
