--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "chart.js": "^4.5.0",
+    "cloudinary": "^2.7.0",
+    "formidable": "^3.5.4",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.10.0",
+    "multer": "^2.0.2",
     "next": "15.1.5",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
@@ -28,6 +31,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^5.0.2",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
