--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "chart.js": "^4.5.0",
+    "cloudinary": "^2.7.0",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.10.0",
+    "multer": "^2.0.2",
     "next": "15.1.5",
     "next-auth": "^4.24.11",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
