--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cloudinary": "^2.7.0",
     "contentful": "^11.8.7",
     "formidable": "^3.5.4",
+    "libphonenumber-js": "^1.12.26",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.10.0",
     "multer": "^2.0.2",
@@ -28,6 +29,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-phone-input-2": "^2.15.1",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
