--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "lucide-react": "^0.475.0",
     "mongoose": "^8.10.0",
     "multer": "^2.0.2",
-    "next": "15.1.5",
+    "next": "^15.1.9",
     "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
-    "react": "^19.0.0",
+    "react": "^19.2.3",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
     "react-toastify": "^11.0.5",
